@@ -192,7 +192,8 @@ $tranStrings = array(
 		'Insert macro' => _('Insert macro'),
 		'Item "%1$s"' => _('Item "%1$s"'),
 		'Go to' => _('Go to'),
-		'Scripts' => _('History'),
+		'Graphs' => _('Graphs'),
+		'History' => _('History'),
 		'Host inventory' => _('Host inventory'),
 		'Host screens' => _('Host screens'),
 		'Latest data' => _('Latest data'),
